vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_sizeof_operand.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_sizeof_operand.vv:2:9: error: expression evaluated but not used
    1 | fn main() {
    2 |     sizeof($embed_file(@FILE)) == 0
      |            ~~~~~~~~~~~~~~~~~~~~~~~~
    3 | }
