vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_sizeof_operand.vv
fn main() {
	sizeof($embed_file(@FILE)) == 0
}
